LiveWallpaper code with following changes : 1. Updated UI. 2. Added Help screen. 3. Added Notification Logic

--- a/liveWallpaperWaterfall/src/main/res/values/strings.xml
+++ b/liveWallpaperWaterfall/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Live Wallpaper Waterfall</string>
+    <string name="app_name">WaterfallLWP</string>
     <string name="action_settings">Settings</string>
-    <string name="wallpaper_description">Live Wallpaper Waterfall</string>
+    <string name="wallpaper_description">Waterfall Live Wallpaper</string>
     <string name="title_button_set_wallpaper">Set Wallpaper</string>
     <string name="title_button_settings">Done</string>
-    <string name="title_wallpaper">Live Wallpaper Waterfall</string>
+    <string name="title_wallpaper">WaterfallLWP</string>
 
 </resources>
